Web rtc file added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,7 @@
     <!--<movie-container></movie-container>-->
     <router-outlet></router-outlet>
 </div>
+<div class="col-xs-12">
+    <video id="localVideo"></video>
+    <div id="remoteVideos"></div>
+</div>
