--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,8 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
             <ul class="nav navbar-nav">
-                <li class="active"><a [routerLink]="['/movies']">Movies</a></li>
+                <li class="active"><a [routerLink]="['/dashboard']">dashboard</a></li>
+                <li><a [routerLink]="['/movies']">Movies</a></li>
                 <li><a [routerLink]="['/tv-shows']">Tv series</a></li>
                 <li><a [routerLink]="['/animes']">Animes</a></li>
             </ul>
