--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,9 @@
-<p>
-  dashboard works asd!
-</p>
+<div *ngIf="!isAuthenticated">
+  <p>
+    Authenticate to proceed!</p>
+    <h1>{{deviceCode}}</h1>
+</div>
+<div *ngIf="isAuthenticated">
+
+</div>
+
