--- a/src/app/movie-container/movie-container.component.html
+++ b/src/app/movie-container/movie-container.component.html
@@ -1,4 +1,10 @@
 <div class="row list-menu">
+  <div class="col-xs-3">
+    <div class="input-group">
+      <input type="text" class="form-control" [(ngModel)]="searchQuery" placeholder="Search">
+      <div class="input-group-addon" (click)="search()"><span class="glyphicon glyphicon-search"></span></div>
+    </div>
+  </div>
   <div class="col-xs-3 pull-right">
     <select [(ngModel)]="listBy" (change)="onlistChange()" #type class="form-control input-sm">
       <option *ngFor="let type of selectLists" [ngValue]="type.value">{{type.key}}</option>
