--- a/src/app/tv-container/tv-container.component.html
+++ b/src/app/tv-container/tv-container.component.html
@@ -1,10 +1,20 @@
+<div class="row list-menu">
+  <div class="col-xs-3">
+    <div class="input-group">
+      <input type="text" class="form-control" [(ngModel)]="searchQuery" placeholder="Search">
+      <div class="input-group-addon" (click)="search()">
+        <span class="glyphicon glyphicon-search"></span>
+      </div>
+    </div>
+  </div>
+  <div class="col-xs-3 pull-right">
+    <select [(ngModel)]="listBy" (change)="onlistChange()" #type class="form-control input-sm">
+      <option *ngFor="let type of selectLists" [ngValue]="type.value">{{type.key}}</option>
+    </select>
+  </div>
+</div>
 <div class="row">
-    <div [ngClass]="{ 'col-xs-8' : vDetails, 'col-xs-12': !vDetails}">
-        <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2" *ngFor="let show of shows">
-            <item-card [movie]="show" (click)="viewDetails(show)"></item-card>
-        </div>
-    </div>
-    <div class="col-xs-4" *ngIf="vDetails">
-        <movie-details (closeView)="toggleView()" [movie]="selectedMovie"></movie-details>
-    </div>
+  <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2" *ngFor="let show of shows">
+    <show-card [show]="show" (click)="viewDetails(show)" [routerLink]="['/show-details']"></show-card>
+  </div>
 </div>
