--- a/src/app/show-details/show-details.component.html
+++ b/src/app/show-details/show-details.component.html
@@ -80,8 +80,8 @@
   <div class="col-xs-3">
     <div class="panel panel-default">
       <div class="panel-body player-body">
-        <div class="thumbnail">
-          <video id="popcorn_show_player" width="100%" height="250" controls>
+        <div class="thumbnail popbox-player">
+          <video id="popcorn_show_player" class="popbox-player" width="100%" height="250" controls>
             Your browser does not support HTML5 video.
           </video>
           <!-- <videojs [idx]="show_player" [url]="videoUrl"></videojs> -->
@@ -100,7 +100,7 @@
             <h3>Episode overview:</h3>
           </li>
           <li>
-            <!-- <h6>{{popcornTorrent.synopsis}}</h6> -->
+            <h6 *ngIf="popcornTorrent.length > 0">{{popcornTorrent[0].synopsis}}</h6>
           </li>
         </ul>
         <accordion>
@@ -111,10 +111,10 @@
               </a>
             </div>
           </accordion-group>
-          <accordion-group heading="Popcorn">
-            <div class="list-group Show--list-group">
-              <a class="list-group-item" (click)="watch(torr);">
-                {{popcornTorrent.title}}
+          <accordion-group heading="Popcorn" *ngIf="popcornTorrent.length > 0">
+            <div class="list-group Show--list-group" *ngFor="let popTorr of popcornTorrent[0].torrents">
+              <a class="list-group-item" (click)="watch(popTorr);">
+                {{popTorr.quality}}
               </a>
             </div>
           </accordion-group>
