Slim loading bar added

--- a/src/app/movie-details/movie-details.component.html
+++ b/src/app/movie-details/movie-details.component.html
@@ -44,7 +44,7 @@
                     </div> -->
                   </accordion-group>
                   <accordion-group heading="Streams">
-                    <button class="btn btn-primary float-right" (click)="refreshStream">refresh</button>
+                    <button class="btn btn-primary float-right" (click)="refreshStream()">refresh</button>
                     <div class="list-group Show--list-group">
                       <a class="list-group-item" *ngFor="let stream of streamResult" (click)="watchStream(stream);" tooltip="{{stream.file}}">
                         {{stream.provider}} | {{stream.lable}}
