--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <div class="container-fluid">
+    <ng2-slim-loading-bar></ng2-slim-loading-bar>
     <router-outlet></router-outlet>
 </div>
