--- a/src/app/movie-details/movie-details.component.html
+++ b/src/app/movie-details/movie-details.component.html
@@ -13,7 +13,7 @@
         </div> -->
         <div class="thumbnail" >
           <!-- <div id="popcorn-box-player" class="popcorn-box-player" #Popcornplayer style="width:100%;height:100%;"></div> -->
-          <video id="popcorn-box-player" #popcornBoxPlayer width="100%" height="250" class="popcorn-box-player" controls autoplay [poster]="movie.moviebackground[0].url">
+          <video id="popcorn-box-player" #popcornBoxPlayer width="100%" height="250" class="popcorn-box-player video-js" controls autoplay [poster]="movie.moviebackground[0].url">
             Your browser does not support HTML5 video.
             <!-- <source [src]="streamSource" [type]="streamType"> -->
           </video>
