--- a/src/app/show-details/show-details.component.html
+++ b/src/app/show-details/show-details.component.html
@@ -81,7 +81,7 @@
     <div class="panel panel-default">
       <div class="panel-body player-body">
         <div class="thumbnail popbox-player">
-          <video id="popcorn_show_player" class="popcorn-box-player" width="100%" height="250" controls>
+          <video id="popcorn_show_player" class="popcorn-box-player video-js" width="100%" height="250" controls>
             Your browser does not support HTML5 video.
           </video>
           <!-- <videojs [idx]="show_player" [url]="videoUrl"></videojs> -->
