--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,7 +6,12 @@
       <h1>{{deviceCode}}</h1>
     </div>
     <div *ngIf="isAuthenticated">
-    
+        <h3>Watchlist</h3>
+      <div class="verticle-scroll">
+        <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 card-div" *ngFor="let movie of traktWatchlist">
+          <item-card [movie]="movie"></item-card>
+        </div>
+      </div>
     </div>
   </div>
 </div>
