--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,13 +9,13 @@
       <h3>Watchlist</h3>
       <div class="verticle-scroll">
         <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 card-div" *ngFor="let movie of traktWatchlist">
-          <item-card [movie]="movie"></item-card>
+          <item-card [movie]="movie" (click)="viewDetails(movie)" [routerLink]="['/movie-details']"></item-card>
         </div>
       </div>
       <h3>Recommendation</h3>
       <div class="verticle-scroll">
         <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 card-div" *ngFor="let movie of traktRecommendation">
-          <item-card [movie]="movie"></item-card>
+          <item-card [movie]="movie" (click)="viewDetails(movie)" [routerLink]="['/movie-details']"></item-card>
         </div>
       </div>
     </div>
