--- a/src/app/movie-details/movie-details.component.css
+++ b/src/app/movie-details/movie-details.component.css
@@ -3,3 +3,8 @@
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
+.accordion-body {
+    max-height: 200px;
+    overflow: auto;
+  }
+  
