--- a/src/app/movie-container/movie-container.component.html
+++ b/src/app/movie-container/movie-container.component.html
@@ -14,7 +14,7 @@
 <div class="row">
   <div [ngClass]="{ 'col-xs-8' : vDetails, 'col-xs-12': !vDetails}">
     <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2" *ngFor="let movie of movies">
-      <item-card (click)="viewDetails(movie)" [routerLink]="['/movie-details']"></item-card>
+      <item-card [movie]="movie" (click)="viewDetails(movie)" [routerLink]="['/movie-details']"></item-card>
     </div>
   </div>
 </div>
